<resources>
    <string name="app_name">GIISProtoT1</string>
    <string name="campusTv">Whitefield Campus</string>
    <string name="locationTv">Banglore, India</string>
    <string name="welcome_msg">Welcome Back, Shweta!</string>
    <string name="notice_board_title">E - notice board</string>
    <string name="notification_title">Notification</string>
    <string name="text_content_ma3">Nulla iaculis erat nonummy. Potenti turpis metus sapien eros massa. Luctus litora nam. Parturient, cursus nostra auctor, conubia lectus nonummy ultricies pede quisque dictumst proin dignissim dis nullam facilisi. Porttitor. Tincidunt fermentum blandit ac. Libero, dis senectus congue penatibus erat cubilia cubilia venenatis natoque dolor. Hac fusce. Cubilia, tempor aliquet in placerat inceptos primis, ligula, laoreet commodo class auctor. Condimentum metus tempus duis senectus sapien dignissim cum bibendum aptent cum mollis tortor. Tempor pulvinar nullam molestie proin cubilia rhoncus per bibendum turpis rhoncus metus litora curabitur taciti habitant orci suspendisse sagittis dignissim purus litora condimentum netus luctus duis hac felis, natoque augue phasellus bibendum porta quis platea Ligula ac sodales tempor fermentum. Amet. Litora nisl. Urna aenean, nibh suscipit nisi ultrices luctus. Et adipiscing nec taciti ac sed nunc sem dui pulvinar vel. Condimentum facilisis nulla commodo proin cras.

Ornare praesent. Posuere porttitor nulla egestas velit primis potenti suscipit maecenas hendrerit tempor nostra faucibus, magna ut pellentesque, dapibus. Sodales magnis. Luctus senectus vel convallis ut laoreet justo tellus feugiat penatibus cursus, natoque etiam placerat venenatis, facilisis erat lorem ultricies volutpat aenean etiam blandit nulla magnis rutrum lectus mattis nullam eros adipiscing sodales dolor primis magna. Ipsum quis morbi vivamus ut fusce facilisi tellus justo bibendum senectus commodo nisi eros. Eleifend vestibulum quam ligula integer in luctus auctor mollis tellus conubia consequat quam mauris dolor. In, at ante tempus id aenean donec fames vivamus lectus turpis neque ridiculus. Sem ipsum praesent lacinia donec. Ornare nulla ante.

    </string>
    <string name="text_content_2ma3">
        Montes etiam mi. Parturient commodo porta accumsan. Taciti nostra gravida bibendum cubilia, aliquet aptent conubia, malesuada, auctor potenti senectus penatibus euismod dui volutpat lobortis. Parturient Facilisis malesuada vel ultrices, sapien mollis justo, cras erat imperdiet arcu sapien. Lacus leo phasellus. Dapibus. Euismod integer lobortis curabitur ligula fringilla ipsum iaculis dis pharetra hendrerit. Phasellus odio iaculis placerat magnis gravida sem risus cum augue aliquet vitae ut cursus imperdiet sem nibh volutpat aptent. Dis quam a elit magnis rhoncus curabitur nascetur. Hac Varius. Malesuada cum accumsan euismod dis nibh. Luctus tempor, sagittis ac pretium vivamus montes libero ante faucibus egestas Vulputate magna vehicula sodales odio. Euismod vehicula laoreet dictum et commodo. Risus. Porta phasellus dui turpis.

Venenatis varius ultricies etiam purus mattis purus penatibus. Ligula ut adipiscing. Velit class. Semper vitae, ut sollicitudin bibendum tellus ante natoque dapibus conubia imperdiet ridiculus. Magnis cubilia nisi molestie vestibulum donec eu. Porta. Taciti maecenas etiam, pede diam ultrices nec mi ultrices condimentum. Bibendum proin orci accumsan. Senectus libero nec hymenaeos dictum. Faucibus proin hendrerit varius inceptos rutrum volutpat adipiscing sociis luctus nibh dictum facilisi. Neque tortor conubia pulvinar bibendum molestie. Faucibus hymenaeos sem ullamcorper nisl nisl lacus torquent. Nonummy eros maecenas, ridiculus magnis suspendisse cum porttitor tempor dictum natoque, lacinia etiam rutrum, habitant malesuada posuere tellus tincidunt, aenean justo ornare. Consequat mi id commodo. Taciti ullamcorper. Primis nascetur elementum dis accumsan et, nam lectus semper. At Netus Orci maecenas dictumst ac adipiscing mi consectetuer aliquam. Nonummy. Dui congue odio augue suscipit consequat habitant ligula elementum neque lobortis sociosqu iaculis erat.</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="just_some_image">just some image</string>
    <string name="view_all">View all</string>
    <string name="inter_school_match">Inter-School Match</string>
    <string name="giis_noida">GIIS Noida</string>
    <string name="sample_notice_desc">Inter school cricket tournament to start from 20th.\nCome and support you team on the school grounds.</string>
    <string name="upcoming_classes_for_today">Upcoming classes for today</string>
    <string name="_9a_maths">9A Maths:</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="_08_00am_08_50am">08:00AM - 08:50AM</string>
    <string name="upcoming">Upcoming</string>
    <string name="my_feed">My feed</string>
    <string name="whats_on_your_mind">What\'s On Your mind?</string>
    <string name="zaire_botosh">Zaire Botosh</string>
    <string name="post_detail_string">6B Grade, Noida . 9:00 AM</string>
    <string name="post_text_para">Luctus senectus vel convallis ut laoreet justo tellus feugiat penatibus cursus, natoque etiam placerat venenatis, facilisis erat lorem ultricies volutpat aenean etiam blandit nulla magnis rutrum lectus mattis nullam eros adipiscing sodales dolor primis magna</string>
    <string name="numerouno">232</string>
    <string name="numerodos">431</string>
    <string name="numerotres">12K</string>
    <string name="more">More</string>
    <string name="tags_sample">Mithun and 3 Others</string>
    <string name="feed">My Feed</string>
    <string name="some_word">Some word</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="saved_posts_desc">All Saved Posts are also shown in teachers wall</string>
    <string name="save_post">Save post</string>
    <string name="report">Report</string>
    <string name="today">Today</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="time_ago">time Ago</string>
    <string name="sample_name">Sample Name</string>
    <string name="label">Label</string>
    <string name="create_post_title">Create Post</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="post_to">Post to</string>
    <string name="tag_people">Tag People</string>
    <string name="please_select_btn">Please Select</string>
    <string name="sample_name_1">Kyara Brown</string>
    <string name="sample_name_2">Cathy Banks</string>
    <string name="sample_count">+23</string>
    <string name="schedule_post">Schedule Post</string>
    <string name="post_notifications">Post Notifications</string>
    <string name="comments">Comments</string>
    <string name="share_with_external_applications">Share with external applications</string>
    <string name="post">Post</string>
    <string name="pick">Pick</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_get_you_logged_into_your_account">Let\'s get you logged into your account</string>
    <string name="giis_id">GIIS ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="go">GO</string>
    <string name="text_entered_was">Text Entered was:</string>
    <string name="text">Text</string>
    <string name="verify_your_mobile_number">Verify Your Mobile Number</string>
    <string name="otpissent">OTP is sent to your number +91 XXXXXXXXXX</string>
    <string name="where_would_you_like_to_receive_your_verification_n_code">Where would you like to receive your verification code?</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_id">Email ID</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_error_msg">*Please enter the correct OTP</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="resend_otp_base_text">Resend OTP ()</string>
    <string name="login_successful">LOGIN SUCCESSFUL</string>
    <string name="ok">Ok</string>
    <string name="click_for_preview">Click For Preview</string>
    <string name="profileName">Swetha Singh</string>
    <string name="teacher_giis_noida">Teacher . GIIS Noida</string>
    <string name="employee_id">Employee ID</string>
    <string name="empiddetail">12167</string>
    <string name="gradetag">Grade</string>
    <string name="gradeDetail">6A, AY20-21</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_nametag">First Name</string>
    <string name="fndetail">Swetha</string>
    <string name="phone_number_tag">Phone Number</string>
    <string name="phone_num_detail">+91 7689165632</string>
    <string name="last_name_tag">Last Name</string>
    <string name="last_name_detail">Singh</string>
    <string name="dob_tag">DOB</string>
    <string name="dobdetail">18/06/1987</string>
    <string name="official_email_tag">Official Email</string>
    <string name="officialemail_detail">swetha@giis.com</string>
    <string name="skype_id_tag">Skype ID</string>
    <string name="bessie_c_detail">Bessie.C</string>
    <string name="zoom_id_tag">Zoom ID</string>
    <string name="zoom_id_detail">382-623-7890</string>
    <string name="address_tag">Address</string>
    <string name="address_detail">Aaghna Villa, Andheri, \nMumbai 470088</string>
    <string name="academic_details_tag">Academic Details</string>
    <string name="campus_tag">Campus</string>
    <string name="campus_details">GIIS Noida</string>
    <string name="location_tag">Location</string>
    <string name="location_details">India, Noida</string>
    <string name="curriculum_tag">Curriculum</string>
    <string name="curriculum_details">CBSE</string>
    <string name="department_tag">Department</string>
    <string name="department_details">Primary</string>
    <string name="subject_tag">Subject</string>
    <string name="subject_details">English</string>
    <string name="roles_and_responsibility_tag">Roles And Responsibility</string>
    <string name="role1">class Monitor 9A</string>
    <string name="role2">Chess Club Coordinator</string>
    <string name="sample_hello">Sample Hello</string>
    <string name="preview_3">Preview 3</string>
    <string name="using_flexboxlayout">Using FlexboxLayout</string>
    <string name="click_here">Click Here</string>
    <string name="login_history">Login History</string>
    <string name="logout">Logout</string>
    <string name="loginhistory_cd">RecyclerView for Login History</string>
    <string name="remember_me">Remember me</string>
    <string name="scroll_msg">Please Scroll Up to Activate \"What\'s On Your Mind\"</string>
    <string name="file_less_than_10_mb">Please Pick a File which is less than 10MB</string>
    <string name="unable_to_select_file">Unable to Select the file</string>
    <string name="asterisk">*</string>
</resources>