<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginCredentialsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="6dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="6dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/giisIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/giis_id"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/giisid_aster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/asterisk"
            android:textColor="@color/giis_purple"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/giisIdTextView"
            app:layout_constraintStart_toEndOf="@id/giisIdTextView"
            app:layout_constraintTop_toTopOf="@id/giisIdTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailIdCredentialET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/notosans_regular"
            android:hint="@string/enter_id"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_dim"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/giisIdTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/emailIdCredentialET" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pwd_aster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/asterisk"
            android:textColor="@color/giis_purple"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/passwordTextView"
            app:layout_constraintStart_toEndOf="@id/passwordTextView"
            app:layout_constraintTop_toTopOf="@id/passwordTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordCredentialETBox"
            style="@style/MyCustomTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/passwordTextView"
            app:passwordToggleDrawable="@drawable/pwd_see_hide"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordCredentialET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:fontFamily="@font/notosans_regular"
                android:hint="@string/enter_password"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_dim"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/giis_purple"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/passwordCredentialETBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/remember_me_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/notosans_light"
            android:text="@string/remember_me"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintBottom_toTopOf="@id/LoginButton"
            app:layout_constraintEnd_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/passwordCredentialETBox" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_button"
            android:enabled="false"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white_smoke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>