<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="6dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="6dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/questionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:fontFamily="@font/notosans_medium"
            android:lines="2"
            android:text="@string/where_would_you_like_to_receive_your_verification_n_code"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toTopOf="@id/choiceGroupRG"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/choiceGroupRG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toBottomOf="@id/questionTV">

            <RadioButton
                android:id="@+id/mobileNumberChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/mobile_number"
                android:textColor="@color/text_black"
                android:layout_marginBottom="@dimen/_8sdp"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/emailIdChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/email_id"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendOTPButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/custom_button"
            android:enabled="false"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/send_otp"
            android:textAllCaps="false"
            android:textColor="@color/white_smoke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toBottomOf="@id/choiceGroupRG"
            app:layout_constraintVertical_bias="0.0"
            app:layout_goneMarginTop="@dimen/_4sdp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>