<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/school_logo_ImageView"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/giislogoicon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/campusToolbarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/campusTv"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@id/locationToolbarTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/school_logo_ImageView"
        app:layout_constraintTop_toTopOf="@id/school_logo_ImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/locationToolbarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:text="@string/locationTv"
        android:textColor="@color/dim_gray"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="@id/school_logo_ImageView"
        app:layout_constraintEnd_toEndOf="@id/campusToolbarTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/campusToolbarTextView"
        app:layout_constraintTop_toBottomOf="@id/campusToolbarTextView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:constraint_referenced_ids="school_logo_ImageView,campusToolbarTextView,locationToolbarTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_feed_Tv_gbd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/feed"
        android:textColor="@color/black"
        android:textSize="@dimen/_19ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_feed"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="my_feed_Tv_gbd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>